Added basic figure class and controller with implementation

--- a/Sketchbook/Sketchbook/Sketchbook/Sketchbook.csproj
+++ b/Sketchbook/Sketchbook/Sketchbook/Sketchbook.csproj
@@ -44,14 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="FigureDescription.cs" />
+    <Compile Include="FigurePreferences.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SketchbookForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SketchbookForm.Designer.cs">
+      <DependentUpon>SketchbookForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WuAntialiasing.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -61,6 +64,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SketchbookForm.resx">
+      <DependentUpon>SketchbookForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
